src/commands/snapshots/backup__commands__init__snapshot_tests__snapshot_template_root_fallback.snap
---
source: src/commands/init.rs
expression: out
---
# backup configuration
# Run with: backup  (reads backup.toml in the current directory)
# Generated by: backup init

[repo]
# Filesystem path (or sftp:/rclone: URI) of the rustic repository.
# The directory will be created automatically on the first run.
path = "/home/root/nfs/new-backups/backup"
# Encryption password.  Use "" for an unencrypted repository.
# WARNING: do not commit real passwords to version control.
password = ""

[mount]
# Optional: mount a NAS share before backing up.
# The tool will run: [command] [target]  (prefixed with doas if --sudo is set)
# command = "mount-nas"
# target  = "new-backups"

[backup]
# Paths to include in the snapshot.  Defaults to "." if this list is empty.
sources = [
    "/",
]

# zstd compression level (1 = fastest / largest, 22 = slowest / smallest).
# Level 3 is a good default for mixed source trees.
compression = 3

# Directories that contain a file with this name are skipped entirely.
# Create an empty file called "ignore" in any cache/build/scratch directory
# you never want archived.
exclude_if_present = "ignore"

# Glob patterns forwarded to rustic --glob.
# Patterns starting with "!" exclude matching paths.
globs = [
    "!**/.git",            # Git object store (large, reconstructible)
    "!tmp/",               # Temporary files
    "!**/target/",         # Rust build artefacts
    "!**/node_modules/",   # Node.js dependencies (reinstallable)
    "!**/*.iso",           # Disk images
    "!**/*.swap",          # Swap files
]

[retention]
# How many snapshots to keep when pruning.  rustic selects the most recent
# snapshot within each window.
keep_daily   = 2   # keep one snapshot per day for the last N days
keep_weekly  = 1   # keep one snapshot per week for the last N weeks
keep_monthly = 1   # keep one snapshot per month for the last N months
